--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,8 @@ body {
   padding: 10px 32px;
   border-radius: 4px;
   border: none;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-web {
@@ -112,6 +114,13 @@ body {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: #FFFFFF;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop__icon {
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop__close-sign:hover svg,
@@ -153,6 +162,8 @@ body {
   padding-left: 40px;
   cursor: pointer;
   outline-style: none;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__modal-input:focus + .form__modal-icon {
@@ -164,7 +175,7 @@ body {
   border-color: #188CE8;
 }
 
-.modal-textarea:focus {
+.form__textarea:focus {
   border: 1px solid #188CE8;
   border-color: #188CE8;
 }
@@ -183,6 +194,8 @@ body {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   fill: #212121;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__textarea {
@@ -196,6 +209,8 @@ body {
   padding: 12px 16px;
   outline-style: none;
   margin-bottom: 20px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__textarea::-webkit-input-placeholder {
@@ -279,6 +294,8 @@ body {
   border-radius: 4px;
   margin-right: 7px;
   margin-left: 14px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__checkbox-input:checked + .form__checkbox-icon {
@@ -310,6 +327,8 @@ body {
   display: block;
   margin: 0 auto;
   padding: 10px 52px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__modal-button:hover,
@@ -936,6 +955,13 @@ body {
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__input:focus {
+  border: 1px solid #188CE8;
+  border-color: #188CE8;
 }
 
 .form__buttons [placeholder] {
@@ -972,6 +998,8 @@ body {
   border-radius: 4px;
   border: none;
   padding: 10px 8px 10px 28px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__icon {
