--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -37,6 +37,11 @@
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.2);
     background-color: $second-color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.backdrop__icon {
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .backdrop__close-sign:hover svg,
@@ -81,6 +86,7 @@
     padding-left: 40px;
     cursor: pointer;
     outline-style: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
 
 }
 
@@ -93,7 +99,7 @@
     border-color: $button-color;
 }
 
-.modal-textarea:focus {
+.form__textarea:focus {
     border: 1px solid $button-color;
     border-color: $button-color;
 }
@@ -112,6 +118,7 @@
     bottom: 50%;
     transform: translateY(-50%);
     fill: $main-color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
 
 
 }
@@ -127,6 +134,7 @@
     padding: 12px 16px;
     outline-style: none;
     margin-bottom: 20px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .form__textarea::placeholder {
@@ -148,6 +156,7 @@
     padding: 0;
     clip: rect(0 0 0 0);
     overflow: hidden;
+    
 
 }
 
@@ -181,6 +190,7 @@
     border-radius: 4px;
     margin-right: 7px;
     margin-left: 14px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -214,6 +224,7 @@
     display: block;
     margin: 0 auto;
     padding: 10px 52px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .form__modal-button:hover,
