--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -143,8 +143,14 @@
     border: 1px solid $form-color;
     filter: drop-shadow(0px 4px 4px $drop-color);
     border-radius: 4px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
+ .form__input:focus {
+    border: 1px solid $button-color;
+    border-color: $button-color;
+ }
 
 .form__buttons [placeholder] {
     padding-left: 16px;
@@ -174,6 +180,7 @@
     border-radius: 4px;
     border: none;
     padding: 10px 8px 10px 28px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__icon {
